Remove sensitive credentials from .env
Cleared sensitive database and API credentials in .env file.

--- a/server/.env
+++ b/server/.env
@@ -1,16 +1,15 @@
 PORT=5000
 
 # PostgreSQL
-DB_USER=postgres
-DB_PASSWORD=12345
+DB_USER=
+DB_PASSWORD=
 DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=hotel_booking
+DB_PORT=
+DB_NAME=
 
 # Amadeus API
-AMADEUS_API_KEY=pTBibqlAbhNMoUOyen5bNC0HsgJy7taa
-AMADEUS_API_SECRET=O5W8Gu6Nb5QTHph2
+AMADEUS_API_KEY=
+AMADEUS_API_SECRET=
 
 # JWT Secret
-JWT_SECRET=Pavani@2002ItIsSeCrEt
-
+JWT_SECRET=
